# experiment

./: .bashrc  .dockerignore  .env  .env.sample  .gitignore  Makefile  README.md  compose.override.yml  dl-bert.sh  experiment.code-workspace  requirements.txt  t.sh
.devcontainer/: devcontainer.json
app/business/company_finder/: company_finder.py
backend/: .env  .env.sample  Makefile  bbh  flask_app.py  pyproject.toml  webapi.py
backend/app/auto_topic/component/models/: model.py  pipeline.py  tokenizer.py
backend/app/auto_topic/component/slack/: slack_client.py  slack_event_handler.py
backend/app/auto_topic/domain/models/: numericalizer.py  pipeliner.py  preprocesser.py  tokenizer.py  topic_model.py  word.py
backend/app/auto_topic/executable/: make_scrapydata.py  make_wikidata.py  retrain_wordvector.py  train_topicmodel.py  train_wordvector.py  tune_wordvector.py
backend/app/auto_topic/infra/: localdb.py  wikidb.py
backend/app/auto_topic/samples/: localdb_provider.py  wordcloud_maker_spacy.py
backend/app/auto_topic/samples/model/: prophet.py
backend/app/base/component/: mlflow_provider.py  params.py
backend/app/base/models/: model.py  trainer.py
backend/app/business/campfire/: downloader.py  graphdb.py  project.py  to_rdb.py
backend/app/business/crawler/: convert_text.py  crawler.py  knowledge_maker.py  url.list
backend/app/codebox/: localbox.py
backend/app/codeinterpreter/component/: chains.py  chat.py  config.py  interprete_async.py  interpreter.py  session.py  session_old.py
backend/app/codeinterpreter/component/llm/: agent_executer_factory.py  chains.py  config.py  llm_builder.py  prompt.py
backend/app/codeinterpreter/executable/: demo_stream.py
backend/app/component/: slack_client.py  slack_event_data.py  slack_event_handler.py
backend/app/component/models/: model.py  pipeline.py  tokenizer.py  vectorizer.py
backend/app/dify/tools/: webapi.py
backend/app/dify/workflow/: FastAPI接続ワークフロー.yml
backend/app/domain/: db_interface.py  localdb_provider.py  slack_block_builder.py  trainer.py  wordcloud_maker.py
backend/app/domain/models/: numericalizer.py  pipeliner.py  preprocesser.py  simple_models.py  tokenizer.py  topic_model.py  word.py
backend/app/executable/: make_wikidata.py  train.py  train_topicmodel.py  train_wordvector.py
backend/app/executable/scrapy/newspy/: settings.py
backend/app/executable/scrapy/newspy/spiders/: news.py
backend/app/executable/scrapy/scrapy_test/: settings.py
backend/app/executable/scrapy/scrapy_test/spiders/: news copy.py  news.py
backend/app/general/executable/: eval.py  train.py
backend/app/general/models/: model.py  trainer.py  trainer_builder.py
backend/app/infra/: localdb.py  wikidb.py
backend/app/langchain/component/: agent_bot.py  agent_builder.py  agent_executor.py  chatbot.py
backend/app/langchain/component/agent/: agent_builder.py  initialize.py  prompt.py
backend/app/langchain/component/agents/: initialize.py  prompt.py
backend/app/langchain/component/chain/: stream.py
backend/app/langchain/component/llms/: redpajama.py
backend/app/langchain/component/tools/: custom_python.py  custom_shell.py
backend/app/langchain/executable/: demo.py  demo_stream.py
backend/app/llama2cpp/component/: llama2cpp.py
backend/app/llm_toolmaker/: bbh.py  tool_maker.py  tool_user.py
backend/app/lowcode_llm/: app.py  executingLLM.py  index.html
backend/app/morph/: classify.py
backend/app/scrapy/newspy/: settings.py
backend/app/semantic_kernel/component/: planner.py  runner.py  semantic_bot.py  semantic_memory.py
backend/app/semantic_kernel/component/skills/answer/: native_function.py
backend/app/semantic_kernel/component/skills/interpreter/: codeinterpreter_python.py
backend/app/semantic_kernel/component/skills/math/: native_function.py
backend/app/semantic_kernel/component/skills/search/: search_local.py  search_web.py
backend/app/semantic_kernel/executable/: auto_runner.py  demo.py  demo_runner.py
backend/app/simple/executable/: train.py
backend/app/simple/models/: model.py  trainer.py
backend/conf/: app.yml  logging.ini  uwsgi.ini
backend/conf/sql/: create_view_project_details_category_transition.sql  create_view_project_details_latest.sql  create_view_projects_category_transition.sql
backend/llm_tools/: example_task.json  word_sorting.json
backend/modules/: dl.sh
backend/modules/component/: multi_threader.py
backend/modules/dataset/: aozoraset.py  dataset.py  ldccset.py
backend/modules/model/: text_classify.py
backend/modules/tools/: elyza.py  neo4j.py  neomodel.py  py2neo.py
backend/modules/util/: logger.py
backend/notebook/: auto-topic.ipynb  azure_document_inteligence.ipynb  campfire.ipynb  campfire_analyze.ipynb  crawled_pdf.ipynb  data2  deepseek_gguf.ipynb  dify.ipynb  dify_answer.md  elyza_exllamav2.ipynb  elyza_gguf.ipynb  firecrawl.ipynb  gemini2.0.ipynb  gpt-4v.ipynb  http2md.ipynb  jgbcm_interest_rate.ipynb  lang_graph.ipynb  langfuse.ipynb  llama2_cpp_ggml.ipynb  llama2_cpp_gguf.ipynb  llm_knowledge_transformer.ipynb  pdf_loader.ipynb  phi-4.ipynb  protuna.py  retrain.ipynb  scrapy.ipynb  unstructured.ipynb  x-analysis.ipynb
backend/notebooks/: visualization.ipynb
conf/: neo4j.conf
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.cpu.yml  compose.gpu.yml  compose.override.db.yml  compose.override.ollama.yml  docker-compose.cpu.yml  docker-compose.gpu.yml
ecs-batch/: Dockerfile  bat01.py  create_ecrrepo.sh  create_ecscluster.sh  requirements.txt
notebook/: codeinterpreter.ipynb  elyza.ipynb  guidance.ipynb  jgb_interest_rate.ipynb  jgbcm_interest_rate.ipynb  langchain_schema.ipynb  matplotlib_jp.ipynb  protuna.py  ruptures.ipynb  wordcloud.ipynb
rc/: .bashrc
